tests/error/array_multi_except.gw
#! [contains] NullPtrException
var int i[1][1];
null @=> i[0];
<<< i[0][0] >>>;
